NetworkPolicy/allow_all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
spec:
  policyTypes:
    - Ingress
  ingress:
    - {}
  podSelector: {}
