NetworkPolicy/allow_all_on_specific_pods.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
spec:
  policyTypes:
    - Ingress
  ingress:
    - {}
  podSelector:
    matchLabels:
      app: webapp
